# fenster-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
fenster/: Cargo.toml  README.md
fenster-sys/: Cargo.toml  README.md  build.rs
fenster-sys/examples/: minimal.rs
fenster-sys/src/: wrapper.c  wrapper.rs
fenster/examples/: minimal.rs
fenster/src/: lib.rs
